[package]
name = "rustgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "*"
tree-sitter-c = "*"
tree-sitter-cpp = "*"
# typed-html = "0.2.2"
html-macro = "*"
cc = "*"
ureq = "*"

[build-dependencies]
cc="*"
